--- a/report.html
+++ b/report.html
@@ -1,27 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Vehicle Condition Report</title>
     <style>
-        /* Add your CSS styles here */
-        .condition-report {
-            font-family: Arial, sans-serif;
-        }
-        .car-part {
-            /* Style for the car part images and text */
-        }
-        /* More styles... */
+      /* Add your CSS styles here */
+      .condition-report {
+        font-family: Arial, sans-serif;
+      }
+      .car-part {
+        /* Style for the car part images and text */
+      }
+      /* More styles... */
     </style>
-</head>
-<body>
-    <img src="{{ images_dir }}/car_parts/{{ car_image['car_front'] }}" alt="Original Car">
-    <div class="condition-report">
-        {% for part, status in conditions.items() %}
+  </head>
+  <body>
+    <section>
+      <h3>Front side</h3>
+      <img
+        src="{{ images_dir }}/car_parts/{{ car_image['car_front'] }}"
+        alt="Original Car"
+      />
+      <div class="condition-report">
+        {% for part, status in conditions["front"].items() %}
         <div class="car-part">
-            <p>{{ part.replace('_', ' ').title() }} Condition: {{ status_texts[status] }}</p>
+          <p>
+            {{ part.replace('_', ' ').title() }} Condition: {{
+            status_texts[status] }}
+          </p>
         </div>
         {% endfor %}
-    </div>
-</body>
+      </div>
+    </section>
+    <section>
+      <h3>Back side</h3>
+      <img
+        src="{{ images_dir }}/car_parts/{{ car_image['car_back'] }}"
+        alt="Original Car"
+      />
+      <div class="condition-report">
+        {% for part, status in conditions["back"].items() %}
+        <div class="car-part">
+          <p>
+            {{ part.replace('_', ' ').title() }} Condition: {{
+            status_texts[status] }}
+          </p>
+        </div>
+        {% endfor %}
+      </div>
+    </section>
+    <section>
+      <h3>Right side</h3>
+      <img
+        src="{{ images_dir }}/car_parts/{{ car_image['car_right'] }}"
+        alt="Original Car"
+      />
+      <div class="condition-report">
+        {% for part, status in conditions["right"].items() %}
+        <div class="car-part">
+          <p>
+            {{ part.replace('_', ' ').title() }} Condition: {{
+            status_texts[status] }}
+          </p>
+        </div>
+        {% endfor %}
+      </div>
+    </section>
+    <section>
+      <h3>Left side</h3>
+      <img
+        src="{{ images_dir }}/car_parts/{{ car_image['car_left'] }}"
+        alt="Original Car"
+      />
+      <div class="condition-report">
+        {% for part, status in conditions["left"].items() %}
+        <div class="car-part">
+          <p>
+            {{ part.replace('_', ' ').title() }} Condition: {{
+            status_texts[status] }}
+          </p>
+        </div>
+        {% endfor %}
+      </div>
+    </section>
+  </body>
 </html>
