Separated mirrors and lights

--- a/report.html
+++ b/report.html
@@ -15,6 +15,8 @@
     </style>
   </head>
   <body>
+    <h1>Vehicle Condition Report</h1>
+    <section>{{summary}}</section>
     <section>
       <h3>Front side</h3>
       <img
