Photos and report working

--- a/report.html
+++ b/report.html
@@ -55,6 +55,7 @@
       <img
         src="{{ images_dir }}/car_parts/{{ car_image['car_right'] }}"
         alt="Original Car"
+        width="500px"
       />
       <div class="condition-report">
         {% for part, status in conditions["right"].items() %}
