added landscape config to report

--- a/report.html
+++ b/report.html
@@ -8,8 +8,8 @@
       .condition-report {
         font-family: Arial, sans-serif;
       }
-      .car-part {
-        /* Style for the car part images and text */
+      @page {
+        size: landscape;
       }
       /* More styles... */
     </style>
